--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "classnames": "^2.3.1",
+    "formidable": "^2.0.1",
     "next": "12.1.5",
+    "prop-types": "^15.8.1",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.30",
+    "@types/react": "^18.0.8",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5"
   }
