added custom FileWriteStream to bypass Formidable's write to local filesystem

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,9 @@
+# Server config
 NEXT_PUBLIC_BASE_URL=http://localhost:3000/
+
+# Database config
+DB_DOMAIN=192.168.1.16
+DB_NAME=mrp_dev
+DB_USERNAME=fernando
+DB_PASSWORD=mysqlFm060292!
+DB_PORT=3306
