--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "formidable": "^2.0.1",
+    "mysql2": "^2.3.3",
     "next": "12.1.5",
     "prop-types": "^15.8.1",
     "react": "18.0.0",
