--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "12.1.5",
     "prop-types": "^15.8.1",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "sharp": "^0.30.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.30",
